Enhanced userguide and website
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@371 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/website/content/index.html
+++ b/src/website/content/index.html
@@ -1,18 +1,18 @@
 <h1>About Gradle</h1>
 <p>
-Gradle is a build system which uses Groovy instead of XML to write your build scripts.
+Gradle is a build system which provides:
 </p>
-Gradle gives you
 <ul>
 <li>a very flexible general purpose build tool like Ant.</li>
-<li>if wanted, build-by-convention frameworks a la Maven (for example for Java projects). But we never lock you in!</li>
+<li>switchable, build-by-convention frameworks a la Maven. But we never lock you in!</li>
 <li>a very powerful support for multi-project builds.</li>
-<li>a very powerful dependency management (based on Ivy).</li>
-<li>supports fully your existing Maven or Ivy repository infrastructure.</li>
-<li>makes usings Ant tasks a bliss.</li>
+<li>a very powerful dependency management (based on Apache Ivy).</li>
+<li>full support for your existing Maven or Ivy repository infrastructure.</li>
+<li>(optionally) support for transitive dependency management without the need for remote repositories and <tt>pom.xml</tt>
+    or <tt>ivy.xml</tt> files.</li>
+<li>Ant tasks as first class citizens.</li>
+<li><i>Groovy</i> build scripts.</li>
 </ul>
 
-Have a look <a href="http://www.gradle.org/userguide/latest/masterch2.html#x4-30002">here</a> for a tutorial. Or
-check the complete <a href="http://www.gradle.org/userguide/latest/userguide.pdf">userguide.pdf</a>, which also
-contains this tutorial (The pdf layout is nicer than the html pages).
-
+Have a look at our <a href="http://www.gradle.org/userguide/latest/userguide.pdf">userguide</a>, which offers 
+tutorials and in-depth coverage.
