--- a/src/website/skeleton.html
+++ b/src/website/skeleton.html
@@ -11,7 +11,7 @@
 
 ${sidebar}
 
-<div id="header"><span>"The next generation build tool for the JVM"</span></div>
+<div id="header"><span>"spend time on your project, not on your build system"</span></div>
 
 <div id="content">
     ${content}
