--- a/src/website/content/api.html
+++ b/src/website/content/api.html
@@ -1,8 +1,8 @@
 <h1>API documentation</h1>
 
-PLEASE NOTE! Gradle is written in Groovy,
-therefore we need to use the GroovyDoc tool to generate the api documentation. GroovyDoc is work in progress. For
-example properties are not processed yet. Right now you might have to directly look into the source code to get the
+PLEASE NOTE! Gradle is written in Groovy, therefore we need to use the GroovyDoc tool to generate the api documentation.
+GroovyDoc is work in progress. For example properties are not processed yet. Right now you might have to directly
+look into the source code to get the
 information you want. You might use <a href="http://svn.gradle.codehaus.org">Fisheye</a> for this. The source code is
 also part of the Gradle distribution. - Apologies for the inconvenience
         
