--- a/src/website/content/getting-started.html
+++ b/src/website/content/getting-started.html
@@ -28,5 +28,5 @@ To check if Gradle is properly installed just type <pre>gradle -v</pre> and you 
     OS Name: Mac OS X
 </pre>
 <h2>Getting Help</h2>
-You might check the userguide at <em>GRADLE_HOME</em><code>/docs/userguide</code>. Typing <code>gradle -h</code> prints
-the command line help. Typing <code>gradle -t</code> shows all the tasks of a gradle build.
+You might check the userguide at <em>GRADLE_HOME</em><code>/docs/userguide</code>. Executing <code>gradle -h</code> prints
+the command line help. Executing <code>gradle -t</code> shows all the tasks of a gradle build.
