--- a/src/website/content/snapshots.html
+++ b/src/website/content/snapshots.html
@@ -1,5 +1,9 @@
 <h1>Gradle Snapshots</h1>
-Snapshots are accessible via our <a href="ci-server.html">Continous Integration machines</a>.
+Snapshots are regularly build via our <a href="ci-server.html">Continous Integration machines</a>.
 They store the gradle distributions for a couple of the last succesful builds.
 You can get Gradle snapshots for example
 <a href="http://teamcity.jetbrains.com/viewLog.html?buildId=lastSuccessful&buildTypeId=bt41&tab=artifacts">here</a> (choose 'Login as a Guest').
+
+<p>For special snapshots (for example created from a working copy) we use our codehaus snapshot repository:</p>
+
+<a href="http://snapshots.dist.codehaus.org/gradle">http://snapshots.dist.codehaus.org/gradle/</a>
