--- a/src/website/skeleton.html
+++ b/src/website/skeleton.html
@@ -17,5 +17,14 @@ ${sidebar}
     ${content}
 </div>
 
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-4207603-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 </body>
 </html>
