--- a/src/website/content/userguide.html
+++ b/src/website/content/userguide.html
@@ -5,7 +5,10 @@ therefore we need to use the GroovyDoc tool to generate the api documentation. G
 example properties are not processed yet. Right now you might have to directly look into the source code to get the
 information you want. You might use <a href="http://svn.gradle.codehaus.org">Fisheye</a> for this. The source code is
 also part of the Gradle distribution. - Apologies for the inconvenience   
-
+<p>
+PLEASE NOTE! The layout of the pdf version is much nicer compared to the html version.
+</p>
+        
 <h3>Current Release (${currentRelease})</h3>
 <ul>
     <li><a href="userguide/release/master.html">HTML</a></li>
