--- a/src/website/content/index.html
+++ b/src/website/content/index.html
@@ -3,16 +3,19 @@
 Gradle is a build system which provides:
 </p>
 <ul>
-<li>a very flexible general purpose build tool like Ant.</li>
-<li>switchable, build-by-convention frameworks a la Maven. But we never lock you in!</li>
-<li>a very powerful support for multi-project builds.</li>
-<li>a very powerful dependency management (based on Apache Ivy).</li>
-<li>full support for your existing Maven or Ivy repository infrastructure.</li>
-<li>(optionally) support for transitive dependency management without the need for remote repositories and <tt>pom.xml</tt>
-    or <tt>ivy.xml</tt> files.</li>
+<li>A very flexible general purpose build tool like Ant.</li>
+<li>Switchable, build-by-convention frameworks a la Maven (for Java and Groovy projects). But we never lock you in!</li>
+<li>Powerful support for multi-project builds.</li>
+<li>Powerful dependency management (based on Apache Ivy).</li>
+<li>Full support for your existing Maven or Ivy repository infrastructure.</li>
+<li>Support for transitive dependency management without the need for remote repositories and <tt>pom.xml</tt>
+    or <tt>ivy.xml</tt> files (optional).</li>
 <li>Ant tasks as first class citizens.</li>
 <li><i>Groovy</i> build scripts.</li>
 </ul>
 
-Have a look at our <a href="http://www.gradle.org/userguide/release/userguide.pdf">userguide</a>, which offers
-tutorials and in-depth coverage.
+Our 50+ pages <a href="http://www.gradle.org/userguide/release/userguide.pdf">user's guide</a> contains tutorials, a detailed overview and in-depth coverage.
+
+<p>The Gradle project itself is highly automated by its Gradle build. <a href="http://gradle.org/ci-server.html">As documented</a>, it runs happily on Teamcity and Bamboo (where Gradle is not pre-installed).
+</p>
+
