--- a/src/website/content/lists.html
+++ b/src/website/content/lists.html
@@ -27,7 +27,15 @@
 Nabble offers also an <a href="http://www.nabble.com/codehaus---Gradle-f31414.html">aggregate view</a> of the user and
 developer list.
 And Nabble also let you post to the Gradle lists without being subscribed.
-
+<p>
+PLEASE NOTE! For reasons we don't know Nabble has been lately very slow in picking up new postings (something like a
+whole day). MarkMail is much
+quicker (readonly). Postings you send via Nabble reach the mailing list immediately.  We have also registered at Gmane, but the process is not finished yet.
+</p>
+<p>
+<a href="http://markmail.org/search/?q=list%3Agradle#query:list%3Aorg.codehaus.gradle.user+page:1+state:facets">Gradle User List at MarkMail</a>
+</p>
+        
 <h2>Embedded Nabble Archive and Forum of the Gradle User List</h2>
 <a id="nabblelink" href="http://www.nabble.com/gradle-user-f31415.html">gradle-user</a>
 <script src="http://www.nabble.com/embed/f31415"></script>
