--- a/src/website/content/lists.html
+++ b/src/website/content/lists.html
@@ -28,7 +28,7 @@ Nabble offers also an <a href="http://www.nabble.com/codehaus---Gradle-f31414.ht
 developer list.
 And Nabble also let you post to the Gradle lists without being subscribed.
 <p>
-PLEASE NOTE! For reasons we don't know Nabble has been lately very slow in picking up new postings (something like a
+PLEASE NOTE! For reasons we don't know Nabble has been lately very slow in picking up new postings (sometimes it has taken a
 whole day). MarkMail is much
 quicker (readonly). Postings you send via Nabble reach the mailing list immediately.  We have also registered at Gmane, but the process is not finished yet.
 </p>
