--- a/website/src/content/source-repository.html
+++ b/website/src/content/source-repository.html
@@ -1,18 +1,9 @@
 <h1>Source Repository</h1>
 
-<h2>Anonymous non-committer access (<b>non-SSL WebDAV</b>)</h2>
+<h2>The source repository is hosted at GitHub</h2>
 
-<a href="http://svn.codehaus.org/gradle/">http://svn.codehaus.org/gradle/</a>
-
-<h2>Committer access over HTTPS + WebDAV</h2>
-<a href="https://svn.codehaus.org/gradle/">https://svn.codehaus.org/gradle/</a>
-
-<h2>Browse Sources Online (Fisheye)</h2>
-<a href="http://svn.gradle.codehaus.org/">http://svn.gradle.codehaus.org/</a>
-
-<h2>RSS feed of changes</h2>
-<a href="http://svn.gradle.codehaus.org/changelog/~rss/gradle/rss.xml">http://svn.gradle.codehaus.org/changelog/~rss/gradle/rss.xml</a>
-
-<h2>Codehaus Project Site</h2>
-Some more details can be found on the <a href="http://xircles.codehaus.org/projects/gradle/repo">codehaus project site</a>.
+Gradle Master Repository: <a href="http://github.com/gradle/gradle">http://github.com/gradle/gradle</a>
+<p>You don't necessarily need Git to get our source code. GitHub offers a source tarball download for any revision of our repository.</p> 
+<p>For details on how to contribute code have a look at this <a href="http://docs.codehaus.org/display/GRADLE/How+to+contribute+a+patch+to+Gradle">Wiki Page</a>.</p>
+      
 
