--- a/website/src/content/people.html
+++ b/website/src/content/people.html
@@ -2,6 +2,7 @@
 
 <h2>Developers</h2>
 <ul>
+<li>Steve Appling</li>
 <li>Steven Devijver</li>
 <li>Hans Dockter (Founder and Project lead)</li>
 <li>Tom Eyckmans</li>
