--- a/website/src/content/source-repository.html
+++ b/website/src/content/source-repository.html
@@ -1,9 +1,6 @@
 <h1>Source Repository</h1>
 
-<h2>The source repository is hosted at GitHub</h2>
+The Gradle source repository is hosted at GitHub: <a href="http://github.com/gradle/gradle">http://github.com/gradle/gradle</a>
 
-Gradle Master Repository: <a href="http://github.com/gradle/gradle">http://github.com/gradle/gradle</a>
-<p>You don't necessarily need Git to get our source code. GitHub offers a source tarball download for any revision of our repository.</p> 
+<p>You don't necessarily need to use Git to get our source code. GitHub offers a source tarball download for any revision of our repository.</p>
 <p>For details on how to contribute code have a look at this <a href="http://docs.codehaus.org/display/GRADLE/How+to+contribute+a+patch+to+Gradle">Wiki Page</a>.</p>
-      
-
