--- a/website/src/content/build.html
+++ b/website/src/content/build.html
@@ -1,6 +1,21 @@
-<h1>Build Gradle from the source</h1>
+<!--
+  ~ Copyright 2009 the original author or authors.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+<h1>Build Gradle from source</h1>
 
-<h2>Get the sources</h2>
+<h2>Get the source</h2>
 Either download the <a href="gradle-${currentRelease}-src.zip">source distribution</a> or <a href="source-repository.html">check out Gradle from git.</a>
 
 <h2>Execute the Build</h2>
