Fix for wrong build commands to build Gradle. Applied patch from Rene Groeschke.

--- a/website/src/content/build.html
+++ b/website/src/content/build.html
@@ -24,12 +24,12 @@ tree contains a Gradle binary distribution capable of building Gradle. With the 
 build Gradle via this internal Gradle distribution. Just go to the top level directory of the source tree and type:<br/><br/>
 Windows:
 <pre>
-    gradlew clean dists
+    gradlew clean assemble
 </pre>
 
 *nix:
 <pre>
-    ./gradlew clean dists
+    ./gradlew clean assemble
 </pre>
 <p>
 In the <code>build/distributions</code> folder you can find the generated Gradle distributions. Note that you will
