Changed Tagline of website

--- a/website/src/skeleton.html
+++ b/website/src/skeleton.html
@@ -12,8 +12,7 @@
 ${sidebar}
 
 <div id="header">
-    <span class="quote">"make the impossible possible, the possible easy, and the easy elegant."</span>
-    <span class="attrib">(Mosh&eacute; Feldenkrais)</span>
+    <span class="quote">A Better Way To Build</span>
 </div>
 
 <div id="content">
