- Fixed broken link on 'build from source' page - Cleaned up the web site header

--- a/website/src/skeleton.html
+++ b/website/src/skeleton.html
@@ -12,7 +12,12 @@
 ${sidebar}
 
 <div id="header">
-    <span class="quote">A Better Way To Build</span>
+    <table>
+        <tr>
+            <td id="title"><span><a href="index.php">Gradle</a></span></td>
+            <td id="quote"><span>A better way to build</span></td>
+        </tr>
+    </table>
 </div>
 
 <div id="content">
