--- a/website/src/content/build.html
+++ b/website/src/content/build.html
@@ -16,7 +16,8 @@
 <h1>Build Gradle from source</h1>
 
 <h2>Get the source</h2>
-Either download the <a href="gradle-${currentRelease}-src.zip">source distribution</a> or <a href="source-repository.html">check out Gradle from git.</a>
+Either download the <a href="http://dist.codehaus.org/gradle/gradle-${currentRelease}-src.zip">source distribution</a>
+or <a href="source-repository.html">check out Gradle from git.</a>
 
 <h2>Execute the Build</h2>
 We use Gradle to build Gradle. But Gradle does not need to be installed on your machine to build it. The source
