- Added news - Some style tweaks

--- a/website/src/skeleton.html
+++ b/website/src/skeleton.html
@@ -17,7 +17,7 @@
         </div>
         <div id="navbar">
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="index.php">HOME</a></li>
                 <li><a href="downloads.html">DOWNLOADS</a></li>
                 <li><a href="documentation.html">DOCUMENTATION</a></li>
                 <li><a href="community.html">COMMUNITY</a></li>
