--- a/website/src/content/tools.html
+++ b/website/src/content/tools.html
@@ -18,8 +18,24 @@
 </table>
 
 <h2>Provided Tools</h2>
-Thanks to the various companies for providing use these tools.
+Thanks to the various companies for providing us hosting and tools.
 <table border="0">
+    <tr>
+        <td><a href="http://www.jfrog.org/products.php">Artifactory</a></td>
+        <td align="center"><img src="img/artifactory.gif"/></td>
+    </tr>
+    <tr>
+        <td><a href="http://www.jetbrains.com/teamcity/index.html">Teamcity</a></td>
+        <td align="center"><img src="img/teamcity.gif"/></td>
+    </tr>
+    <tr>
+        <td><a href="http://www.jetbrains.com/idea/index.html">Idea IntelliJ</a></td>
+        <td align="center"><img src="img/intellij.jpg"/></td>
+    </tr>
+    <tr>
+        <td><a href="http://www.github.com">Github</a></td>
+        <td align="center"><img src="img/github.png"/></td>
+    </tr>
     <tr>
         <td><a href="http://www.atlassian.com/software/bamboo/">Bamboo</a></td>
         <td align="center"><img src="img/bamboo.gif"/></td>
@@ -29,23 +45,7 @@ Thanks to the various companies for providing use these tools.
         <td align="center"><img src="img/confluence.gif"/></td>
     </tr>
     <tr>
-        <td><a href="http://www.atlassian.com/software/fisheye/">Fisheye</a></td>
-        <td align="center"><img src="img/fisheye.gif"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://www.jetbrains.com/idea/index.html">Idea IntelliJ</a></td>
-        <td align="center"><img src="img/intellij.jpg"/></td>
-    </tr>
-    <tr>
         <td><a href="http://www.atlassian.com/software/jira/">Jira</a></td>
         <td align="center"><img src="img/jira.gif"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://www.svnkit.com/">Svnkit</a></td>
-        <td align="center"><img src="img/svnkit.jpg"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://www.jetbrains.com/teamcity/index.html">Teamcity</a></td>
-        <td align="center"><img src="img/teamcity.gif"/></td>
     </tr>
 </table>
