- Include some tutorials in the website content - More words to website pages - Rearranged contents of footer - Some style tweaks

--- a/website/src/content/ci-server.html
+++ b/website/src/content/ci-server.html
@@ -7,14 +7,14 @@ Gradle is continously built at the following locations:
     <li><a href="http://teamcity.jetbrains.com/viewType.html?buildTypeId=bt41">Windows Build</a></li>
     <li><a href="http://teamcity.jetbrains.com/viewType.html?buildTypeId=bt107">Linux Build</a></li>
 </ul>
-<h2>Codehaus Bamboo</h2>
-<ul>
-    <li><a href="http://bamboo.ci.codehaus.org/browse/GRADLE-CORETRUNK">Linux Build</a></li>
-    <li><a href="http://bamboo.ci.codehaus.org/browse/GRADLE-NTL">Nightly Build</a> (uploads documentation)</li>
-</ul>
 <h2>Hudson</h2>
 <ul>
     <li><a href="http://code.taglab.com/hudson/job/Gradle/">Linux Build</a></li>
+</ul>
+<h2>Codehaus Bamboo (currently disabled)</h2>
+<ul>
+    <li><a href="http://bamboo.ci.codehaus.org/browse/GRADLE-CORETRUNK">Linux Build</a></li>
+    <li><a href="http://bamboo.ci.codehaus.org/browse/GRADLE-NTL">Nightly Build</a> (uploads documentation)</li>
 </ul>
 
 <p>As we have had many platform specific issues it is very important for us to have a continuous build for multiple
