--- a/website/src/content/documentation.html
+++ b/website/src/content/documentation.html
@@ -1,8 +1,13 @@
 <h1>Documentation</h1>
 
-<p>Here is where you can find the documentation</p>
+<p>The documentation for Gradle can be found at the following locations:</p>
 <ul>
-    <li><a href="tutorials.html">tutorials</a></li>
-    <li><a href="userguide.html">user guide</a></li>
+    <li><a href="installation.html">Installing Gradle</a></li>
+    <li><a href="tutorials.html">Tutorials</a></li>
+    <li><a href="userguide.html">User Guide</a></li>
     <li><a href="api.html">API</a></li>
+    <li><a href="http://faq.gradle.org">FAQ</a></li>
+    <li><a href="http://gradle.codehaus.org/Cookbook">Cookbook</a></li>
+    <li><a href="http://gradle.codehaus.org/External+Resources">External Resources</a></li>
+    <li><a href="http://gradle.codehaus.org/Home">Wiki</a></li>
 </ul>
