--- a/website/src/content/downloads.html
+++ b/website/src/content/downloads.html
@@ -13,25 +13,21 @@
         Source only distribution</li>
 </ul>
 
-<h2>Other Releases</h2>
+<p>You can also <a href="build.html">build from source</a>.</p>
+
+<h2>Older Releases</h2>
 
 <p>You can find older releases at our codehaus distribution repository: <a href="http://dist.codehaus.org/gradle">http://dist.codehaus.org/gradle</a></p>
 
 <h2>Gradle Snapshots</h2>
 
 <h3>CI builds</h3>
-Snapshots are regularly built via our <a href="ci-server.html">Continous Integration machines</a>.
-They store the Gradle distributions for a couple of the last succesful builds.
+<p>Snapshots are regularly built via our <a href="ci-server.html">Continuous Integration machines</a>.
+They store the Gradle distributions for a couple of the last successful builds.</p>
 
 <h4>Teamcity</h4>
-Click <a href="http://teamcity.jetbrains.com/viewLog.html?buildId=lastSuccessful&amp;buildTypeId=bt41&amp;tab=artifacts">here</a> to
-get the artifact list of the last successful build. (choose the link 'Login as a Guest').
-
-<h4>Bamboo</h4>
-<p>Choose the build you are interested in from the list of
-<a href="http://bamboo.ci.codehaus.org/build/viewBuildHistory!default.action?buildKey=GRADLE-CORETRUNK">completed builds</a>.
-Then click the <code>Artifacts</code> tab and then the <code>dists</code> link. This will give you a list of the different distributions produced
-by this build.</p>
+<p>Click <a href="http://teamcity.jetbrains.com/viewLog.html?buildId=lastSuccessful&amp;buildTypeId=bt41&amp;tab=artifacts">here</a> to
+get the artifact list of the last successful build. (choose the link 'Login as a Guest').</p>
 
 <h3>Snapshot repository</h3>
 <p>For special snapshots (for example created from a working copy) we use our codehaus snapshot repository:
