--- a/website/src/content/community.html
+++ b/website/src/content/community.html
@@ -1,2 +1,10 @@
 <h1>The Gradle Community</h1>
-<p>This page has some details about the community.</p>
+
+<p>Here is where you can find out more about joining the Gradle community:</p>
+<ul>
+    <li><a href="contributing.html">Contributing</a></li>
+    <li><a href="lists.html">Mailing Lists</a></li>
+    <li><a href="http://jira.codehaus.org/browse/GRADLE">Bug Reports</a></li>
+    <li><a href="http://gradle.codehaus.org/Roadmap">Roadmap</a></li>
+    <li><a href="http://gradle.codehaus.org/Development">Development Wiki</a></li>
+</ul>
