--- a/website/src/content/documentation.html
+++ b/website/src/content/documentation.html
@@ -1,13 +1,29 @@
+<!--
+  ~ Copyright 2010 the original author or authors.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
 <h1>Documentation</h1>
 
 <p>The documentation for Gradle can be found at the following locations:</p>
 <ul>
+    <li><a href="overview.html">Gradle overview</a></li>
     <li><a href="installation.html">Installing Gradle</a></li>
     <li><a href="tutorials.html">Tutorials</a></li>
-    <li><a href="userguide.html">User Guide</a></li>
+    <li><a href="userguide.html">User guide</a></li>
     <li><a href="api.html">API</a></li>
     <li><a href="http://faq.gradle.org">FAQ</a></li>
     <li><a href="http://gradle.codehaus.org/Cookbook">Cookbook</a></li>
-    <li><a href="http://gradle.codehaus.org/External+Resources">External Resources</a></li>
     <li><a href="http://gradle.codehaus.org/Home">Wiki</a></li>
+    <li><a href="http://gradle.codehaus.org/External+Resources">External resources</a></li>
 </ul>
