--- a/website/src/content/tools.html
+++ b/website/src/content/tools.html
@@ -1,51 +1,30 @@
+
 <h1>Tools</h1>
 
 <h2>Gradle is powered by</h2>
 
-<table border="0">
+<table class='tools'>
     <tr>
-        <td><a href="http://groovy.codehaus.org/">Groovy</a></td>
-        <td align="center"><img src="img/groovy.png"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://ant.apache.org/ivy/">Ivy</a></td>
-        <td align="center"><img src="img/ivy.png"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://ant.apache.org/">Ant</a></td>
-        <td align="center"><img src="img/ant.gif"/></td>
+        <td><img src="img/groovy.png"/><a href="http://groovy.codehaus.org/">Groovy</a></td>
+        <td><img src="img/ivy.png"/><a href="http://ant.apache.org/ivy/">Ivy</a></td>
+        <td><img src="img/ant.gif"/><a href="http://ant.apache.org/">Ant</a></td>
     </tr>
 </table>
 
 <h2>Provided Tools</h2>
 Thanks to the various companies for providing us hosting and tools.
-<table border="0">
+<table class='tools'>
     <tr>
-        <td><a href="http://www.jfrog.org/products.php">Artifactory</a></td>
-        <td align="center"><img src="img/artifactory.gif"/></td>
+        <td><img src="img/artifactory.gif"/><a href="http://www.jfrog.org/products.php">Artifactory</a></td>
+        <td><img src="img/teamcity.gif"/><a href="http://www.jetbrains.com/teamcity/index.html">Teamcity</a></td>
+        <td><img src="img/intellij.jpg"/><a href="http://www.jetbrains.com/idea/index.html">Idea IntelliJ</a></td>
     </tr>
     <tr>
-        <td><a href="http://www.jetbrains.com/teamcity/index.html">Teamcity</a></td>
-        <td align="center"><img src="img/teamcity.gif"/></td>
+        <td><img src="img/github.png"/><a href="http://www.github.com">Github</a></td>
+        <td><img src="img/bamboo.gif"/><a href="http://www.atlassian.com/software/bamboo/">Bamboo</a></td>
+        <td><img src="img/confluence.gif"/><a href="http://www.atlassian.com/software/confluence/">Confluence</a></td>
     </tr>
     <tr>
-        <td><a href="http://www.jetbrains.com/idea/index.html">Idea IntelliJ</a></td>
-        <td align="center"><img src="img/intellij.jpg"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://www.github.com">Github</a></td>
-        <td align="center"><img src="img/github.png"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://www.atlassian.com/software/bamboo/">Bamboo</a></td>
-        <td align="center"><img src="img/bamboo.gif"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://www.atlassian.com/software/confluence/">Confluence</a></td>
-        <td align="center"><img src="img/confluence.gif"/></td>
-    </tr>
-    <tr>
-        <td><a href="http://www.atlassian.com/software/jira/">Jira</a></td>
-        <td align="center"><img src="img/jira.gif"/></td>
+        <td><img src="img/jira.gif"/><a href="http://www.atlassian.com/software/jira/">Jira</a></td>
     </tr>
 </table>
