--- a/website/src/skeleton.html
+++ b/website/src/skeleton.html
@@ -1,18 +1,3 @@
-<!--
-  ~ Copyright 2010 the original author or authors.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -26,13 +11,14 @@
 <body>
 
 <div id="top">
-    <div id="header">
-        <div id="logo">
-            <div id="title"><a href="index.php">Gradle</a></div>
-            <div id="quote"><span>a better way to build</span></div>
-        </div>
-        <div id="navbar">
-            <ul>
+    <div id="headerContainer">
+        <div id="header">
+            <div id="logo">
+                <div id="title"><a href="index.php">Gradle</a></div>
+                <div id="quote"><span>a better way to build</span></div>
+            </div>
+            <div id="navbar">
+                <ul>
 <%
 Map urls = new LinkedHashMap()
 urls.HOME = 'index.php'
@@ -44,18 +30,23 @@ for (entry in urls.entrySet() ) {
 %>
     <li><a href="${entry.value}" class="${fileName == entry.value ? 'selected' : ''}">${entry.key}</a></li>
 <% } %>
-            </ul>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
 <div id="middle">
-    <div class="content">
-    ${content}
+    <div class="contentTop"></div>
+    <div class="contentContainer">
+        <div class="content">${content}</div>
     </div>
+    <div class="contentBottom"></div>
 </div>
 <div id="bottom">
-    <div id="footer">
-        ${sidebar}
+    <div id="footerContainer">
+        <div id="footer">
+            ${sidebar}
+        </div>
     </div>
 </div>
 
