- Allow multiple gradle versions to be included in the web site - Added 'who uses Gradle?' and 'training' sections to home page - Updated 'about Gradle' words on the home page

--- a/website/src/content/build.html
+++ b/website/src/content/build.html
@@ -16,7 +16,7 @@
 <h1>Build Gradle from source</h1>
 
 <h2>Get the source</h2>
-Either download the <a href="http://dist.codehaus.org/gradle/gradle-${currentRelease}-src.zip">source distribution</a>
+Either download the <a href="http://dist.codehaus.org/gradle/gradle-${currentRelease.version}-src.zip">source distribution</a>
 or <a href="source-repository.html">check out Gradle from git</a>.
 
 <h2>Execute the Build</h2>
