--- a/website/src/skeleton.html
+++ b/website/src/skeleton.html
@@ -14,8 +14,10 @@
     <div id="headerContainer">
         <div id="header">
             <div id="logo">
-                <div id="title"><a href="index.php">Gradle</a></div>
-                <div id="quote"><span>a better way to build</span></div>
+                <a href="index.php">
+                    <div id="title">Gradle</div>
+                    <div id="quote"><span>a better way to build</span></div>
+                </a>
             </div>
             <div id="navbar">
                 <ul>
