--- a/website/src/content/userguide.html
+++ b/website/src/content/userguide.html
@@ -6,12 +6,14 @@ For the Groovy parts of Gradle you have to look directly into the <a href="sourc
 information you want. The source code is also part of the Gradle distribution. With our next release we will provide
 complete API documentation.
 
-<h2>Current Release (${currentRelease})</h2>
+<% releases.each { release -> %>
+<h2>${release.title} (${release.version})</h2>
 <ul>
-    <li><a href="${currentRelease}/docs/userguide/userguide.html">HTML</a> (one page per chapter)</li>
-    <li><a href="${currentRelease}/docs/userguide/userguide_single.html">HTML</a> (single page)</li>
-    <li><a href="${currentRelease}/docs/userguide/userguide.pdf">PDF</a></li>
+    <li><a href="${release.version}/docs/userguide/userguide.html">HTML</a> (one page per chapter)</li>
+    <li><a href="${release.version}/docs/userguide/userguide_single.html">HTML</a> (single page)</li>
+    <li><a href="${release.version}/docs/userguide/userguide.pdf">PDF</a></li>
 </ul>
+<% } %>    
 <h2>Latest (as usually uploaded by the latest successful nightly build)</h2>
 <ul>
     <li><a href="latest/docs/userguide/userguide.html">HTML</a> (one page per chapter)</li>
