- Some userguide and website words

--- a/website/src/content/community.html
+++ b/website/src/content/community.html
@@ -1,6 +1,17 @@
 <h1>The Gradle Community</h1>
 
-<p>Here is where you can find out more about joining the Gradle community:</p>
+<h2>Getting help</h2>
+
+<p>The first place to start is with the <a href="documentation.html">documentation</a>. In particular,
+    the <a href="userguide.html">user guide</a> contains a lot of reference material. Also, keep in mind that build
+    scripts are simply Groovy code that drives the Gradle API, so you might find the <a href="api.html">API documentation</a>
+    useful.</p>
+
+<p>If you don't find your answer in the documentation, you might try the <a href="lists.html">mailing lists</a>.</p>
+
+<h2>Contributing to Gradle</h2>
+
+<p>Here is where you can find out more about contributing to Gradle:</p>
 <ul>
     <li><a href="contributing.html">Contributing</a></li>
     <li><a href="lists.html">Mailing Lists</a></li>
