--- a/website/src/content/lists.html
+++ b/website/src/content/lists.html
@@ -1,31 +1,37 @@
 <h1>Mailing Lists</h1>
 
 <p>These are the mailing lists that have been established for this project.</p>
-<table class="styledTable">
-    <tr class="header">
-        <td>List Name</td>
-        <td>Subscribe</td>
-        <td>Unsubscribe</td>
-        <td>Archive at <a href="http://www.nabble.org">Nabble</a></td>
-        <td>Archive at <a href="http://www.gmane.org">Gmane</a></td>
-    </tr>
-    <tr class="row">
-        <td><b>Gradle Users</b></td>
-        <td><a href="mailto:user-subscribe@gradle.codehaus.org">Subscribe</a>
-        </td>
-        <td><a href="mailto:user-unsubscribe@gradle.codehaus.org">Unsubscribe</a>
-        </td>
-        <td align="center"><a href="http://www.nabble.com/gradle-user-f31415.html">View</a></td>
-        <td align="center"><a href="http://article.gmane.org/gmane.comp.programming.tools.gradle.user/48">View</a></td>
-    </tr>
-    <tr class="row">
-        <td><b>Gradle Developers</b></td>
-        <td><a href="mailto:dev-subscribe@gradle.codehaus.org">Subscribe</a></td>
-        <td><a href="mailto:dev-unsubscribe@gradle.codehaus.org">Unsubscribe</a></td>
-        <td align="center"><a href="http://www.nabble.com/gradle-dev-f31413.html">View</a></td>
-        <td align="center"><a href="http://article.gmane.org/gmane.comp.programming.tools.gradle.devel/6">View</a></td>
-    </tr>
+<div class="table">
+<table class="table">
+    <thead>
+        <tr class="header">
+            <td>List Name</td>
+            <td>Subscribe</td>
+            <td>Unsubscribe</td>
+            <td>Archive at <a href="http://www.nabble.org">Nabble</a></td>
+            <td>Archive at <a href="http://www.gmane.org">Gmane</a></td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td><b>Gradle Users</b></td>
+            <td><a href="mailto:user-subscribe@gradle.codehaus.org">Subscribe</a>
+            </td>
+            <td><a href="mailto:user-unsubscribe@gradle.codehaus.org">Unsubscribe</a>
+            </td>
+            <td align="center"><a href="http://www.nabble.com/gradle-user-f31415.html">View</a></td>
+            <td align="center"><a href="http://article.gmane.org/gmane.comp.programming.tools.gradle.user/48">View</a></td>
+        </tr>
+        <tr>
+            <td><b>Gradle Developers</b></td>
+            <td><a href="mailto:dev-subscribe@gradle.codehaus.org">Subscribe</a></td>
+            <td><a href="mailto:dev-unsubscribe@gradle.codehaus.org">Unsubscribe</a></td>
+            <td align="center"><a href="http://www.nabble.com/gradle-dev-f31413.html">View</a></td>
+            <td align="center"><a href="http://article.gmane.org/gmane.comp.programming.tools.gradle.devel/6">View</a></td>
+        </tr>
+    </tbody>
 </table>
+</div>
 <p>
 Nabble offers also an <a href="http://www.nabble.com/codehaus---Gradle-f31414.html">aggregate view</a> of the user and
 developer list.
