Documentation changes - Added 'standard plugins' chapter which lists the available plugins, include this in the website too - Replaced references to usePlugin() with apply() - Javadocs

--- a/website/src/content/documentation.html
+++ b/website/src/content/documentation.html
@@ -21,6 +21,7 @@
     <li><a href="installation.html">Installing Gradle</a></li>
     <li><a href="tutorials.html">Tutorials</a></li>
     <li><a href="userguide.html">User guide</a></li>
+    <li><a href="standard_plugins.html">Gradle plugins</a></li>
     <li><a href="api.html">API</a></li>
     <li><a href="http://faq.gradle.org">FAQ</a></li>
     <li><a href="http://gradle.codehaus.org/Cookbook">Cookbook</a></li>
