Some web site changes: - Added irc channel details - Reoragnised the mailing list page - Removed the embedded mailing list widget (for now)

--- a/website/src/content/community.html
+++ b/website/src/content/community.html
@@ -3,11 +3,12 @@
 <h2>Getting help</h2>
 
 <p>The first place to start is with the <a href="documentation.html">documentation</a>. In particular,
-    the <a href="userguide.html">user guide</a> contains a lot of reference material. Also, keep in mind that build
+    the <a href="userguide.html">user guide</a> contains a lot of reference material. Also, keep in mind that Gradle build
     scripts are simply Groovy code that drives the Gradle API, so you might find the <a href="api.html">API documentation</a>
     useful.</p>
 
-<p>If you don't find your answer in the documentation, you might try the <a href="lists.html">mailing lists</a>.</p>
+<p>If you don't find your answer in the documentation, you might try the <a href="lists.html">mailing lists</a>. You could
+    also join us on <a href="irc.html">IRC</a> and ask your question there.</p>
 
 <h2>Contributing to Gradle</h2>
 
@@ -15,6 +16,7 @@
 <ul>
     <li><a href="contributing.html">Contributing</a></li>
     <li><a href="lists.html">Mailing Lists</a></li>
+    <li><a href="irc.html">IRC</a></li>
     <li><a href="http://jira.codehaus.org/browse/GRADLE">Bug Reports</a></li>
     <li><a href="http://gradle.codehaus.org/Roadmap">Roadmap</a></li>
     <li><a href="http://gradle.codehaus.org/Development">Development Wiki</a></li>
