--- a/website/src/content/contributing.html
+++ b/website/src/content/contributing.html
@@ -17,12 +17,13 @@ a simple, low effort way you can contribute to Gradle. You can do this by:
     <li>Joining some of the <a href="lists.html">mailing lists</a> and participating in the discussions there. Our
         design discussions happen in the open, on the developer mailing list.
     </li>
+    <li>Join us for a chat on <a href="irc.html">IRC</a>.</li>
     <li>Reporting bugs or adding feature requests to <a href="http://jira.codehaus.org/browse/GRADLE">JIRA</a>.</li>
 </ul>
 
 <h2>Help With Support</h2>
 
-We need people to help answer questions on the user mailing list. This can be a good way of learning about how Gradle
+We need people to help answer questions on the user mailing list and IRC. This can be a good way of learning about how Gradle
 works, by diving into the code to help solve user problems.
 
 <h2>Improve the Documentation</h2>
