--- a/website/src/content/lists.html
+++ b/website/src/content/lists.html
@@ -5,48 +5,63 @@
 <table class="table">
     <thead>
         <tr class="header">
-            <td>List Name</td>
-            <td>Subscribe</td>
-            <td>Unsubscribe</td>
-            <td>Archive at <a href="http://www.nabble.org">Nabble</a></td>
-            <td>Archive at <a href="http://www.gmane.org">Gmane</a></td>
+            <td>List</td>
+            <td colspan='3'>Archives</td>
+            <td>Topics</td>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td><b>Gradle Users</b></td>
-            <td><a href="mailto:user-subscribe@gradle.codehaus.org">Subscribe</a>
-            </td>
-            <td><a href="mailto:user-unsubscribe@gradle.codehaus.org">Unsubscribe</a>
-            </td>
-            <td align="center"><a href="http://www.nabble.com/gradle-user-f31415.html">View</a></td>
-            <td align="center"><a href="http://article.gmane.org/gmane.comp.programming.tools.gradle.user/48">View</a></td>
-        </tr>
-        <tr>
-            <td><b>Gradle Developers</b></td>
-            <td><a href="mailto:dev-subscribe@gradle.codehaus.org">Subscribe</a></td>
-            <td><a href="mailto:dev-unsubscribe@gradle.codehaus.org">Unsubscribe</a></td>
-            <td align="center"><a href="http://www.nabble.com/gradle-dev-f31413.html">View</a></td>
-            <td align="center"><a href="http://article.gmane.org/gmane.comp.programming.tools.gradle.devel/6">View</a></td>
-        </tr>
+    <tr>
+        <td class="colHeader">
+            <div><b>Gradle Users</b></div>
+            <div><a href="mailto:user-subscribe@gradle.codehaus.org">Subscribe</a> |
+                <a href="mailto:user-unsubscribe@gradle.codehaus.org">Unsubscribe</a>
+            </div>
+        </td>
+        <td><a href="http://www.nabble.com/gradle-user-f31415.html">Nabble</a></td>
+        <td>
+            <a href="http://gradle.markmail.org/search/?q=#query:%20list%3Aorg.codehaus.gradle.user+page:1+state:facets">MarkMail</a>
+        </td>
+        <td><a href="http://dir.gmane.org/gmane.comp.programming.tools.gradle.user">Gmane</a></td>
+        <td>General discussions, questions and announcements regarding Gradle. Try this mailing list if you are looking
+            for help.
+        </td>
+    </tr>
+    <tr>
+        <td class="colHeader">
+            <div><b>Gradle Developers</b></div>
+            <div><a href="mailto:dev-subscribe@gradle.codehaus.org">Subscribe</a> |
+                <a href="mailto:dev-unsubscribe@gradle.codehaus.org">Unsubscribe</a></div>
+        </td>
+        <td><a href="http://www.nabble.com/gradle-dev-f31413.html">Nabble</a></td>
+        <td><a href="http://gradle.markmail.org/search/?q=#query:%20list%3Aorg.codehaus.gradle.dev+page:1+state:facets">MarkMail</a>
+        </td>
+        <td><a href="http://dir.gmane.org/gmane.comp.programming.tools.gradle.devel">Gmane</a></td>
+        <td>Design discussions. Everyone is welcome to join in these discussions.</td>
+    </tr>
+    <tr>
+        <td class="colHeader">
+            <div><b>Gradle SCM</b></div>
+            <div><a href="mailto:scm-subscribe@gradle.codehaus.org">Subscribe</a> |
+                <a href="mailto:scm-unsubscribe@gradle.codehaus.org">Unsubscribe</a></div>
+        </td>
+        <td>-</td>
+        <td><a href="http://gradle.markmail.org/search/?q=#query:%20list%3Aorg.codehaus.gradle.scm+page:1+state:facets">MarkMail</a>
+        </td>
+        <td>-</td>
+        <td>Source changes, CI build results</td>
+    </tr>
+    <tr><td class="colHeader"><b>Aggregate</b></td>
+        <td><a href="http://old.nabble.com/codehaus---Gradle-f31414.html">Nabble</a></td>
+        <td><a href="http://gradle.markmail.org/search/?q=">MarkMail</a></td>
+        <td>-</td>
+        <td>An aggregate of all mailing lists</td>
+    </tr>
     </tbody>
 </table>
 </div>
-<p>
-Nabble offers also an <a href="http://www.nabble.com/codehaus---Gradle-f31414.html">aggregate view</a> of the user and
-developer list.
-And Nabble also let you post to the Gradle lists without being subscribed.
-</p>
+
 <p>
 PLEASE NOTE! For reasons we don't know Nabble has been lately very slow in picking up new postings (sometimes it has taken a
-whole day). MarkMail is much
-quicker (readonly). Postings you send via Nabble reach the mailing list immediately.  We are also archived by Gmane and might switch on this page to a Gmane
-embedded web frontend in the future. 
+whole day). MarkMail is much quicker (readonly). Postings you send via Nabble reach the mailing list immediately.
 </p>
-<p>
-<a href="http://markmail.org/search/?q=list%3Agradle#query:list%3Aorg.codehaus.gradle.user+page:1+state:facets">Gradle User List at MarkMail</a>
-</p>
-        
-<h2>Embedded Nabble Archive and Forum of the Gradle User List</h2>
-<a id="nabblelink" href="http://www.nabble.com/gradle-user-f31415.html">gradle-user</a>
-<script src="http://www.nabble.com/embed/f31415"></script>
