--- a/website/src/skeleton.html
+++ b/website/src/skeleton.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>Gradle - ${title}</title>
+    <title>${title} - Gradle</title>
     <link href="css/base.css" rel="stylesheet" type="text/css"/>
     <link href="css/gradle.css" rel="stylesheet" type="text/css"/>
 </head>
